--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^12.4.10",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
